almost. Need to fix display block for > 480

--- a/responsive-nav/index.html
+++ b/responsive-nav/index.html
@@ -3,10 +3,9 @@
 
 <head>
     <title>Responsive Navigation</title>
-
     <link rel="stylesheet" href="./css/styles.css">
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 
 <body>
@@ -27,16 +26,6 @@
             Aliqua aute excepteur consectetur sunt pariatur enim quis occaecat occaecat adipisicing irure eu incididunt
             dolore.</p>
     </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <script>
-        $(document).ready(function () {
-            $('#menu-trigger').click(function() {
-                $('#main-menu').slideToggle();
-            })
-        });
-    </script>
 </body>
 
 </html>
